CT-3834 Fix label contrast in sidebar

--- a/app/assets/stylesheets/pq.scss
+++ b/app/assets/stylesheets/pq.scss
@@ -657,7 +657,7 @@ textarea.form-control {
 
   // make un-commissioned questions form labels look like
   // h3s used for commissioned questions
-  label.form-label { color: $secondary-text-colour; }
+  label.form-label { color: $text-colour; }
 
 }
 
